2011-10-28  Walter Lee  <walt@tilera.com>

	* NEWS: Fix TILEPro capitalization.

2011-10-28  Nick Clifton  <nickc@redhat.com>

	* po/ja.po: New Japanese translation.
	* configure.in (ALL_LINGUAS): Add ja.
	* configure: Regenerate.

2011-10-26  Joern Rennecke  <joern.rennecke@embecosm.com>

	* doc/as.texinfo [EPIPHANY]: Include c-epiphany.texi to avoid
	duplication.

2011-10-25  Mike Frysinger  <vapier@gentoo.org>

	* config/rx-defs.h (rx_error): Add const to first arg.
	* config/rx-parse.y (rx_error): Likewise.

2011-10-25  Nick Clifton  <nickc@redhat.com>

	* config/tc-ns32k.c (md_begin): Rename local variable 'stat' to
	'status'.

2011-10-25  Joern Rennecke  <joern.rennecke@embecosm.com>

	* NEWS: Mention addition of Adapteva Epiphany support.
	* config/tc-epiphany.c: New file.
	* config/tc-epiphany.h: New file.
	* Makefile.am (TARGET_CPU_CFILES): Add config/tc-epiphany.c .
	(TARGET_CPU_HFILES): Add config/tc-epiphany.h .
	* configure.in: Also set using_cgen for epiphany.
	* configure.tgt: Handle epiphany.
	* doc/Makefile.am (CPU_DOCS): Add c-epiphany.texi .
	* doc/all.texi: Set EPIPHANY.
	* doc/as.texinfo: Add EPIPHANY-specific text.
	* doc/c-epiphany.texi: New file.
	* po/gas.pot: Regenerate.
	* Makefile.in: Regenerate.
	* configure: Regenerate.
	* doc/Makefile.in: Regenerate.
	* po/POTFILES.in: Regenerate.

2011-10-24  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (move_register): Fix formatting.

2011-10-24  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (can_swap_branch_p): Remove empty line.
	(start_noreorder): Likewise.

2011-10-24  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (s_option): Fix formatting.
	(mips_elf_final_processing): Likewise.

2011-10-24  Maciej W. Rozycki  <macro@codesourcery.com>

	* config/tc-mips.c (validate_micromips_insn): Fix formatting.

2011-10-24  David Binderman  <dcb314@hotmail.com>

	* config/tc-mn10200.c (md_convert_frag): Add missing break.
